--- a/package.json
+++ b/package.json
@@ -9,13 +9,34 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/material": "^5.15.20",
     "@next/font": "14.2.3",
+    "@prisma/client": "^4.8.1",
+    "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "20.14.2",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
+    "@types/validator": "^13.12.0",
+    "axios": "^1.7.2",
+    "bcrypt": "^5.1.1",
+    "cookies-next": "^4.2.1",
+    "jose": "^5.4.1",
+    "jsonwebtoken": "^9.0.2",
     "next": "14.2.3",
+    "prisma": "^4.8.1",
     "react": "18.3.1",
+    "react-datepicker": "^7.2.0",
     "react-dom": "18.3.1",
-    "typescript": "5.4.5"
+    "typescript": "5.4.5",
+    "validator": "^13.12.0",
+    "validatorjs": "^3.22.1"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.4"
   }
 }
